<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <!--  Header component  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <!-- Title for the insights page -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Login"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- Input Fields Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Username Label -->
            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <!-- Username Input -->
            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Password Label -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <!-- Buttons Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="Login" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="Register New User"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>