<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <!--  Header component  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <!-- Title for the insights page -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Registration" />

        <!-- Go Back button -->
        <Button
            android:id="@+id/buttonGoBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="Back"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Input for new username -->
            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/inputNewUsername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"/>

            <!-- Input for new password -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Password"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/themeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Color theme"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

                <!-- Theme selection spinner -->
                <Spinner
                    android:id="@+id/themeSpinner"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:entries="@array/theme_options"/>

                <!-- Register button -->
                <Button
                    android:id="@+id/buttonRegisterUser"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:text="Confirm"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

